--- a/style.css
+++ b/style.css
@@ -5,3 +5,34 @@
 body {
   text-align: center;
 }
+
+#title {
+  font-size: 4rem;
+  margin-bottom: 0;
+}
+
+main {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+main h1 {
+  background: lightskyblue;
+  width: 50%;
+  border: 2px solid black;
+  cursor: pointer;
+}
+
+#question {
+  font-size: 3rem;
+  margin-bottom: 0;
+}
+
+#btn {
+  font-size: 3rem;
+  border-radius: 20px;
+  background: lightskyblue;
+  cursor: pointer;
+}
