correct and wrong answers
answer turns red when it is incorrect and green when it is correct

--- a/style.css
+++ b/style.css
@@ -40,3 +40,15 @@ main h1 {
 .none {
   display: none;
 }
+
+.correct {
+  background-color: green;
+}
+
+.wrong {
+  background-color: red;
+}
+
+.hidden {
+  visibility: hidden;
+}
